@@ -7,13 +7,14 @@ o Spray splits a file to multiple outputs by alternating pages
 o List document and page info in JSON format
 o List page labels in JSON format
 o List fonts in JSON format
-o Identify PDF/A, PDF/X, PDF/E, PDF/VT, PDF/UA
+o Identify PDF/A, PDF/X, PDF/E, PDF/VT, PDF/UA in -info
 o Extract font files from a document
 o List images on a page with -list-images[-json]
 
 Extended features:
 
 o -list-images-used[-json] extends -image-resolution
+o Use -raw with -extract-images to get PNMs
 
 Fixes:
 
